--- a/spring_boot_practice/src/main/resources/application.yml
+++ b/spring_boot_practice/src/main/resources/application.yml
@@ -7,14 +7,14 @@ helloWorld: "spring boot 测试编码"
 
 mysql:
   jdbcName: com.mysql.jdbc.Driver
-  dbUrl: jdbc:mysql://localhost:3306/project256
+  dbUrl: jdbc:mysql://localhost:3306/bank
   userName: root
   password: 000000
 
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/project256
+    url: jdbc:mysql://localhost:3306/bank
     username: root
     password: 123456
   jpa:
